--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,8 @@ html, body {
      height: 100vh;
      width: 100vw;
      background-color: black;
+     max-width: 100vw;
+     max-height: 100vh;
 }
 
 body{
