--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@ html, body {
      height: 100vh;
      width: 100vw;
      background-color: black;
-     max-width: 100vw;
+     min-width: 100vw;
      max-height: 100vh;
 }
 
